GameInstance 및 AssetManager 추가 및 엔진에 등록

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/StartMap.StartMap
 ServerDefaultMap=/Game/Maps/StartMap.StartMap
 GlobalDefaultGameMode=/Script/ProjectM.PMGameModeBase
+GameInstanceClass=/Script/ProjectM.PMGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -73,6 +74,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectM")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectM")
+AssetManagerClassName=/Script/ProjectM.PMAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
