GameInstance에서 ComponentManager에 Tag를 이용한 초기화 순서 등록

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,3 +90,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/GameplayTags.GameplayTagsSettings]
+GameplayTagTableList=/Game/Config/Tags/DefaultGameplayTags.ini
+
