CoreRedirect 및 LyraAnimInstace Migration

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,3 +93,5 @@ ManualIPAddress=
 [/Script/GameplayTags.GameplayTagsSettings]
 GameplayTagTableList=/Game/Config/Tags/DefaultGameplayTags.ini
 
+[CoreRedirects]
++ClassRedirects=(OldName="LyraAnimInstance", NewName="/Script/ProjectM.PMAnimInstance")
