Ability 코드 1차 추가

--- a/ProjectM.uproject
+++ b/ProjectM.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ProjectM",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
@@ -36,6 +39,10 @@
 		},
 		{
 			"Name": "AnimationLocomotionLibrary",
+			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
 			"Enabled": true
 		}
 	]
