GameplayCue 및 Effect 1차 적용(대용량 파일 제거)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,6 +3,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=572B72CA48F2FB3AB43908AD9A7E6B88
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+GlobalGameplayCueManagerClass=/Script/ProjectM.PMGameplayCueManager
+
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 -PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
@@ -17,4 +20,7 @@ bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
+
+[/Script/GameFeatures.GameFeaturesSubsystemSettings]
+GameFeaturesManagerClassName=/Script/ProjectM.PMGameFeaturePolicy
 
