CommonUI, Game Code 추가 및 BP에 Default UI Layout설정

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -24,3 +24,5 @@ MetaDataTagsForAssetRegistry=()
 [/Script/GameFeatures.GameFeaturesSubsystemSettings]
 GameFeaturesManagerClassName=/Script/ProjectM.PMGameFeaturePolicy
 
+[/Script/ProjectM.PMUIManagerSubsystem]
+DefaultUIPolicyClass=/Game/UI/BP_UIPolicy.BP_UIPolicy_C
