--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,6 +75,7 @@ FontDPI=72
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectM")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectM")
 AssetManagerClassName=/Script/ProjectM.PMAssetManager
+LocalPlayerClassName=/Script/CommonGame.CommonLocalPlayer
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
