LocalPlayer 프로젝트 내부 클래스로 다시 래핑 후 설정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,7 +75,7 @@ FontDPI=72
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectM")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectM")
 AssetManagerClassName=/Script/ProjectM.PMAssetManager
-LocalPlayerClassName=/Script/CommonGame.CommonLocalPlayer
+LocalPlayerClassName=/Script/ProjectM.PMLocalPlayer
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
