--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Movement.WeaponFire",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Pistol.Fire",DevComment="")
++GameplayTagList=(Tag="HUD.Slot.Recticle",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
