GameplayTagStat 추가 및 탄창 위젯 연결 및 추가

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Weapon.Pistol.Fire",DevComment="")
 +GameplayTagList=(Tag="HUD.Slot.Recticle",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
++GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
++GameplayTagList=(Tag="ShooterGame.Weapon.MagazineSize",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
