인벤토리 구현 중

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Weapon.Pistol.Fire",DevComment="")
 +GameplayTagList=(Tag="HUD.Slot.Inventory",DevComment="")
 +GameplayTagList=(Tag="HUD.Slot.Recticle",DevComment="")
++GameplayTagList=(Tag="InputTag.Togle.Inventory",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineSize",DevComment="")
