WidgetRegister만들어서 자동으로 위젯 등록하게 해주는거 구현 중

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,6 +76,7 @@ FontDPI=72
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectM")
 AssetManagerClassName=/Script/ProjectM.PMAssetManager
 LocalPlayerClassName=/Script/ProjectM.PMLocalPlayer
+GameViewportClientClassName=/Script/ProjectM.MViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
