--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -20,4 +20,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Input.Inventory",DevComment="")
 
