--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,6 +14,7 @@ GlobalGameplayCueManagerClass=/Script/ProjectM.PMGameplayCueManager
 +PrimaryAssetTypesToScan=(PrimaryAssetType="GameFeatureData",AssetBaseClass="/Script/GameFeatures.GameFeatureData",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=,SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=AlwaysCook))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PMUserFacingExperienceDefinition",AssetBaseClass="/Script/ProjectM.PMUserFacingExperienceDefinition",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/System/Playlists")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PMExperienceDefinition",AssetBaseClass="/Script/ProjectM.PMExperienceDefinition",bHasBlueprintClasses=True,bIsEditorOnly=False,Directories=((Path="/Game/System/Experiences")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="MWidgetRegister",AssetBaseClass="/Script/ProjectM.MWidgetRegister",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/UI/WidgetRegister/WidgetDataAssets")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
@@ -26,3 +27,4 @@ GameFeaturesManagerClassName=/Script/ProjectM.PMGameFeaturePolicy
 
 [/Script/ProjectM.PMUIManagerSubsystem]
 DefaultUIPolicyClass=/Game/UI/BP_UIPolicy.BP_UIPolicy_C
+
