--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -20,6 +20,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
++GameplayTagList=(Tag="UI.Registry.HUD.Layout",DevComment="")
++GameplayTagList=(Tag="UI.Registry.HUD.ShooterMainHUD",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag.Inventory",DevComment="")
 
