--- a/ProjectM.uproject
+++ b/ProjectM.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.4",
+	"EngineAssociation": "",
 	"Category": "",
 	"Description": "",
 	"Modules": [
