--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/StartMap.StartMap
-ServerDefaultMap=/Game/Maps/StartMap.StartMap
+ServerDefaultMap=/ShooterCore/Maps/L_ShooterGym.L_ShooterGym
 GlobalDefaultGameMode=/Script/ProjectM.PMGameModeBase
 GameInstanceClass=/Script/ProjectM.PMGameInstance
 
