--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,6 +15,7 @@ GlobalGameplayCueManagerClass=/Script/ProjectM.PMGameplayCueManager
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PMUserFacingExperienceDefinition",AssetBaseClass="/Script/ProjectM.PMUserFacingExperienceDefinition",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/System/Playlists")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PMExperienceDefinition",AssetBaseClass="/Script/ProjectM.PMExperienceDefinition",bHasBlueprintClasses=True,bIsEditorOnly=False,Directories=((Path="/Game/System/Experiences")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="MWidgetRegister",AssetBaseClass="/Script/ProjectM.MWidgetRegister",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/UI/WidgetRegister/WidgetDataAssets")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="MTableAsset",AssetBaseClass="/Script/ProjectM.MTableAsset",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/Table")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
