--- a/ProjectM.uproject
+++ b/ProjectM.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"GameplayAbilities",
-				"CommonUI"
+				"CommonUI",
+				"UMG"
 			]
 		}
 	],
