체력 회복 이펙트까지 됨

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,9 +9,11 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Movement.WeaponFire",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Item.InstantHealing",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Pistol.Fire",DevComment="")
 +GameplayTagList=(Tag="HUD.Slot.Inventory",DevComment="")
 +GameplayTagList=(Tag="HUD.Slot.Recticle",DevComment="")
++GameplayTagList=(Tag="InputTag.Item.InstantHealing",DevComment="")
 +GameplayTagList=(Tag="InputTag.Togle.Inventory",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
