--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="HUD.Slot.Inventory",DevComment="")
 +GameplayTagList=(Tag="HUD.Slot.Recticle",DevComment="")
 +GameplayTagList=(Tag="InputTag.Item.InstantHealing",DevComment="")
++GameplayTagList=(Tag="InputTag.Jump",DevComment="")
 +GameplayTagList=(Tag="InputTag.Togle.Inventory",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
