--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,6 +77,7 @@ FontDPI=72
 AssetManagerClassName=/Script/ProjectM.PMAssetManager
 LocalPlayerClassName=/Script/ProjectM.PMLocalPlayer
 GameViewportClientClassName=/Script/ProjectM.MViewportClient
+WorldSettingsClassName=/Script/ProjectM.MWorldSettings
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
