--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,8 +25,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.Layout",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.MainHUD",DevComment="")
++GameplayTagList=(Tag="UI.Registry.HUD.MainLobbyHUD",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.ShooterMainHUD",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag.Inventory",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Layout.DefaultLayout",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Lobby",DevComment="")
 
