--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartMap.StartMap
-EditorStartupMap=/Game/Maps/StartMap.StartMap
+GameDefaultMap=/Game/Maps/MainLobby.MainLobby
+EditorStartupMap=/Game/Maps/MainLobby.MainLobby
 ServerDefaultMap=/ShooterCore/Maps/L_ShooterGym.L_ShooterGym
 GlobalDefaultGameMode=/Script/ProjectM.PMGameModeBase
 GameInstanceClass=/Script/ProjectM.PMGameInstance
@@ -188,3 +188,6 @@ bExplicitCanvasChildZOrder=True
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.GameNetworkManager]
+NetTravelTimeout=10.0
+InitialConnectTimeout=10.0
