서브레벨 동적으로 로드 완료, 복셀월드 생설알고리즘 해야함

--- a/ProjectM.uproject
+++ b/ProjectM.uproject
@@ -54,8 +54,12 @@
 		},
 		{
 			"Name": "VoxelFree",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/b08e5581837e4bbca486b61cdf2751bb"
+		},
+		{
+			"Name": "VoxelMine",
+			"Enabled": true
 		}
 	]
 }
