--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -26,7 +26,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Registry.HUD.Layout",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.MainHUD",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.MainLobbyHUD",DevComment="")
++GameplayTagList=(Tag="UI.Registry.HUD.MainPersistent",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.ShooterMainHUD",DevComment="")
++GameplayTagList=(Tag="UI.Registry.HUD.VoxelMine",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag.Inventory",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Layout.DefaultLayout",DevComment="")
