--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,6 +23,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Game.InteractionKey",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.Layout",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.MainHUD",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.MainLobbyHUD",DevComment="")
