--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,8 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Effect.SetByCaller.Health",DevComment="")
++GameplayTagList=(Tag="Ability.Effect.SetByCaller.MaxHealth",DevComment="")
 +GameplayTagList=(Tag="Event.Movement.WeaponFire",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Item.InstantHealing",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Pistol.Fire",DevComment="")
