--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -27,6 +27,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.GameMenu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Game.DefaultGameHud",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionKey",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionList",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Shop",DevComment="")
