기본공격 어빌리티 서버에서 실행할 수 있도록 함

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainLobby.MainLobby
-EditorStartupMap=/Game/Maps/MainLobby.MainLobby
-ServerDefaultMap=/ShooterCore/Maps/L_ShooterGym.L_ShooterGym
+GameDefaultMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/TestMap.TestMap
+ServerDefaultMap=/Game/Maps/TestMap.TestMap
 GlobalDefaultGameMode=/Script/ProjectM.PMGameModeBase
 GameInstanceClass=/Script/ProjectM.PMGameInstance
 
@@ -201,3 +201,4 @@ InitialConnectTimeout=10.0
 DefaultSizeInMegabyte=64
 bPoolAutoGrowInEditor=True
 +Pools=(Formats=(PF_DXT5,PF_DXT5),MinTileSize=264,MaxTileSize=264,SizeInMegabyte=264,bEnableResidencyMipMapBias=False,bAllowSizeScale=True,MinScaledSizeInMegabyte=0,MaxScaledSizeInMegabyte=0)
+
