--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -174,15 +174,27 @@ bExplicitCanvasChildZOrder=True
 +Profiles=(Name="Ragdoll",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore)),HelpMessage="Simulating Skeletal Mesh Component. All other channels will be set to default.")
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
-+Profiles=(Name="Monster",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Monster",CustomResponses=((Channel="Camera",Response=ECR_Ignore)),HelpMessage="Needs description")
++Profiles=(Name="Monster",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Monster",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="Monster"),(Channel="Player"),(Channel="NPC")),HelpMessage="Needs description")
 +Profiles=(Name="Interaction",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Interaction",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Monster",Response=ECR_Ignore),(Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Ignore)),HelpMessage="Needs description")
-+Profiles=(Name="Player",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Interaction",Response=ECR_Overlap)),HelpMessage="Needs description")
-+Profiles=(Name="NPC",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="NPC",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="Needs description")
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Monster")
++Profiles=(Name="Player",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Monster"),(Channel="Interaction",Response=ECR_Overlap),(Channel="Player"),(Channel="NPC")),HelpMessage="Needs description")
++Profiles=(Name="NPC",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="NPC",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Monster"),(Channel="Player"),(Channel="NPC")),HelpMessage="Needs description")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Monster")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Interaction")
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="NPC")
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="Camera",Response=ECR_Ignore)))
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Player")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="NPC")
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Monster",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap)))
++EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Monster",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="Monster",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap)))
++EditProfiles=(Name="PhysicsActor",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="Destructible",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="Monster",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap)))
++EditProfiles=(Name="Vehicle",CustomResponses=((Channel="Monster"),(Channel="Player"),(Channel="NPC")))
++EditProfiles=(Name="UI",CustomResponses=((Channel="Monster",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
