questwidget프로토타입 완성

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,6 +23,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="Level.Field",DevComment="")
 +GameplayTagList=(Tag="Level.Square",DevComment="")
++GameplayTagList=(Tag="Level.TestMap",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineSize",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
@@ -30,6 +31,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.Menu",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.DIrectlyAdd.DefaultGameHud",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Game.Dialogue",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionKey",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionList",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Shop",DevComment="")
@@ -41,6 +43,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Registry.HUD.VoxelMine",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag.Inventory",DevComment="")
++GameplayTagList=(Tag="UI.Registry.InputTag.PlayerQuest",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Layout.DefaultLayout",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Lobby",DevComment="")
 
