바이너리 제거

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 VoxelFree_5.4
+Binaries
 Linux*
 ThirdPerson
 *DediTest*
 Intermediate
 Saved
-*Map*
+Content/Map*/*
 *SmokeSwirl_3_Flipbook_CHANNELPACK*
 .vs
 .vsconfig
