퀘스트 위젯작업(시작가능, 진행까지 완료. 완료상태 해야함), 퀘스트 아이템 부여 및 제거 해야함

--- a/ProjectM.uproject
+++ b/ProjectM.uproject
@@ -7,28 +7,21 @@
 		{
 			"Name": "ProjectM",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine",
-				"GameplayAbilities",
-				"CommonUI",
-				"UMG",
-				"DeveloperSettings"
-			]
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "ProjectMEditor",
 			"Type": "Editor",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
 		}
 	],
 	"Plugins": [
 		{
 			"Name": "ModelingToolsEditorMode",
-			"Enabled": true,
-			"TargetAllowList": [
-				"Editor"
-			]
+			"Enabled": true
 		},
 		{
 			"Name": "GameFeatures",
@@ -53,6 +46,14 @@
 		{
 			"Name": "CommonUI",
 			"Enabled": true
+		},
+		{
+			"Name": "VisualStudioTools",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/362651520df94e4fa65492dbcba44ae2",
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		}
 	]
 }
