--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,6 +35,8 @@ MinSampleRate=8000.000000
 CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
+CompilerVersion="14.38.33130"
+ToolchainVersion="14.38.33130"
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=True
