데디테스트 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,24 +35,17 @@ MinSampleRate=8000.000000
 CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
-CompilerVersion="14.38.33130"
-ToolchainVersion="14.38.33130"
+CompilerVersion=14.38.33130
+ToolchainVersion=14.38.33130
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=True
-
 r.GenerateMeshDistanceFields=True
-
 r.DynamicGlobalIlluminationMethod=1
-
 r.ReflectionMethod=1
-
 r.Shadow.Virtual.Enable=1
-
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=True
 r.VirtualTexturedLightmaps=False
@@ -80,6 +73,8 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectM")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectM")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ProjectM")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/ProjectM")
 +ActiveClassRedirects=(OldClassName="/Script/ProjectM.PMCharacterBase", NewClassName="/Script/ProjectM.MPlayerCharacterBase")
 AssetManagerClassName=/Script/ProjectM.PMAssetManager
 LocalPlayerClassName=/Script/ProjectM.PMLocalPlayer
