--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -3,3 +3,9 @@
 +CommonEditorMaps=/Game/Maps/Level_P_Field.Level_P_Field
 +CommonEditorMaps=/Game/Maps/TestMap.TestMap
 
+[/Script/ProjectMEditor.MDeveloperSettings]
++CommonEditorMaps=/Game/Maps/Level_P_Square.Level_P_Square
++CommonEditorMaps=/Game/Maps/Level_P_Field.Level_P_Field
++CommonEditorMaps=/Game/Maps/TestMap.TestMap
++CommonEditorMaps=/Game/DediTest/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+
