NPC찾아가기 1차 푸시

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -27,6 +27,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Level.Field",DevComment="")
 +GameplayTagList=(Tag="Level.Square",DevComment="")
 +GameplayTagList=(Tag="Level.TestMap",DevComment="")
++GameplayTagList=(Tag="Search.Npc.Brondin",DevComment="")
++GameplayTagList=(Tag="Search.Npc.Dwarf",DevComment="")
++GameplayTagList=(Tag="Search.Npc.Grella",DevComment="")
++GameplayTagList=(Tag="Search.Npc.Reo",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineSize",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
