--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,17 +25,17 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Weapon.DefaultAttack",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="Level.Field",DevComment="")
-+GameplayTagList=(Tag="Level.Field.Brondin",DevComment="")
++GameplayTagList=(Tag="Level.Field.Test2",DevComment="")
++GameplayTagList=(Tag="Level.Field.TestMonsterSpawner",DevComment="")
 +GameplayTagList=(Tag="Level.Square",DevComment="")
 +GameplayTagList=(Tag="Level.Square.Brondin",DevComment="")
 +GameplayTagList=(Tag="Level.Square.Dwarf",DevComment="")
 +GameplayTagList=(Tag="Level.Square.Grella",DevComment="")
 +GameplayTagList=(Tag="Level.Square.Reo",DevComment="")
++GameplayTagList=(Tag="Level.Square.Test2",DevComment="")
 +GameplayTagList=(Tag="Level.TestMap",DevComment="")
-+GameplayTagList=(Tag="Search.Npc.Brondin",DevComment="")
-+GameplayTagList=(Tag="Search.Npc.Dwarf",DevComment="")
-+GameplayTagList=(Tag="Search.Npc.Grella",DevComment="")
-+GameplayTagList=(Tag="Search.Npc.Reo",DevComment="")
++GameplayTagList=(Tag="Level.TestMap.MonsterSpawner",DevComment="")
++GameplayTagList=(Tag="Level.TestMap.TestMapNpc",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineAmmo",DevComment="")
 +GameplayTagList=(Tag="ShooterGame.Weapon.MagazineSize",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Game",DevComment="")
