--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -223,3 +223,6 @@ bPoolAutoGrowInEditor=True
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=False
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot4=Four
+
