퀘스트 완료

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,12 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Level.Field.MonsterSpawner.Caterpia",NewTagName="Level.Field.MonsterSpawner_Caterpia")
++GameplayTagRedirects=(OldTagName="Level.Field.MonsterSpawner.Caterroad",NewTagName="Level.Field.MonsterSpawner_Caterroad")
++GameplayTagRedirects=(OldTagName="Level.Field.MonsterSpawner.Dotomong",NewTagName="Level.Field.MonsterSpawner_Dotomong")
++GameplayTagRedirects=(OldTagName="Level.Field.MonsterSpawner.Gajimong",NewTagName="Level.Field.MonsterSpawner_Gajimong")
++GameplayTagRedirects=(OldTagName="Level.Field.MonsterSpawner.Growdel",NewTagName="Level.Field.MonsterSpawner_Growdel")
++GameplayTagRedirects=(OldTagName="Level.Field.MonsterSpawner.Ssaessakrina",NewTagName="Level.Field.MonsterSpawner_Ssaessakrina")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Cost.Cooldown",DevComment="")
@@ -26,9 +32,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Weapon.DefaultAttack",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="Level.Field",DevComment="")
-+GameplayTagList=(Tag="Level.Field.MonsterSpawner.Caterpia",DevComment="")
-+GameplayTagList=(Tag="Level.Field.MonsterSpawner.Dotomong",DevComment="")
-+GameplayTagList=(Tag="Level.Field.MonsterSpawner.Gajimong",DevComment="")
++GameplayTagList=(Tag="Level.Field.MonsterSpawner_Caterpia",DevComment="")
++GameplayTagList=(Tag="Level.Field.MonsterSpawner_Caterroad",DevComment="")
++GameplayTagList=(Tag="Level.Field.MonsterSpawner_Dotomong",DevComment="")
++GameplayTagList=(Tag="Level.Field.MonsterSpawner_Gajimong",DevComment="")
++GameplayTagList=(Tag="Level.Field.MonsterSpawner_Growdel",DevComment="")
++GameplayTagList=(Tag="Level.Field.MonsterSpawner_Ssaessakrina",DevComment="")
 +GameplayTagList=(Tag="Level.Field.Test2",DevComment="")
 +GameplayTagList=(Tag="Level.Field.TestMonsterSpawner",DevComment="")
 +GameplayTagList=(Tag="Level.Square",DevComment="")
