--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -59,6 +59,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Registry.Game.Dialogue",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionKey",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionList",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Game.ItemContext",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Restart",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Shop",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.Layout",DevComment="")
