--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,12 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/TestMap.TestMap
-EditorStartupMap=/Game/Maps/TestMap.TestMap
-ServerDefaultMap=/Game/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Maps/MainLobby.MainLobby
+EditorStartupMap=/Game/Maps/MainLobby.MainLobby
+ServerDefaultMap=/Game/Maps/Persistent_MainLevel.Persistent_MainLevel
 GlobalDefaultGameMode=/Script/ProjectM.PMGameModeBase
 GameInstanceClass=/Script/ProjectM.PMGameInstance
+TransitionMap=/Game/Maps/Persistent_MainLevel.Persistent_MainLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
