디버깅 전용 Server함수 제거

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -121,6 +121,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +DirectoriesToAlwaysCook=(Path="/Game/Ability/GameplayCue")
++DirectoriesToAlwaysCook=(Path="/Game/UI/WidgetRegister")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
