옵션 UI생성, 옵션 UI-ESC바인드

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -73,6 +73,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Registry.HUD.ShooterMainHUD",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.HUD.VoxelMine",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag",DevComment="")
++GameplayTagList=(Tag="UI.Registry.InputTag.Esc",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag.Inventory",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.InputTag.PlayerQuest",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Layout.DefaultLayout",DevComment="")
