--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -41,6 +41,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Level.Field.MonsterSpawner_Ssaessakrina",DevComment="")
 +GameplayTagList=(Tag="Level.Field.Test2",DevComment="")
 +GameplayTagList=(Tag="Level.Field.TestMonsterSpawner",DevComment="")
++GameplayTagList=(Tag="Level.Lobby",DevComment="")
 +GameplayTagList=(Tag="Level.Square",DevComment="")
 +GameplayTagList=(Tag="Level.Square.Brondin",DevComment="")
 +GameplayTagList=(Tag="Level.Square.Dwarf",DevComment="")
@@ -63,6 +64,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Registry.Game.InteractionList",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.ItemContext",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Loading",DevComment="")
++GameplayTagList=(Tag="UI.Registry.Game.Option",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Restart",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.Shop",DevComment="")
 +GameplayTagList=(Tag="UI.Registry.Game.ToastMessage",DevComment="")
