패키징 에러메시지 수정(실패는 아니고 메시지만 뜨는거)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -34,7 +34,7 @@ DefaultUIPolicyClass=/Game/UI/BP_UIPolicy.BP_UIPolicy_C
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
+BuildTarget=ProjectM
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -122,6 +122,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +DirectoriesToAlwaysCook=(Path="/Game/Ability/GameplayCue")
 +DirectoriesToAlwaysCook=(Path="/Game/UI/WidgetRegister")
++DirectoriesToAlwaysCook=(Path="/Game/System")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
