프레임 60으로 제한

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,6 +81,8 @@ AssetManagerClassName=/Script/ProjectM.PMAssetManager
 LocalPlayerClassName=/Script/ProjectM.PMLocalPlayer
 GameViewportClientClassName=/Script/ProjectM.MViewportClient
 WorldSettingsClassName=/Script/ProjectM.MWorldSettings
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
