--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,8 +81,10 @@ AssetManagerClassName=/Script/ProjectM.PMAssetManager
 LocalPlayerClassName=/Script/ProjectM.PMLocalPlayer
 GameViewportClientClassName=/Script/ProjectM.MViewportClient
 WorldSettingsClassName=/Script/ProjectM.MWorldSettings
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=60.000000
+bSmoothFrameRate=True
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=60.000000),UpperBound=(Type=Exclusive,Value=120.000000))
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
